@startuml
class Garage {

}

class GarageVehicle {

}

abstract class Vehicle {
    +ModelName: string
    +LicenseNumber: string
    +Engine: FuelEngine | ElectricEngine
    -AppendWheel()
    -RemainingEnergyPercentage()
}

class Car {
}

class Truck {

}

class Motorcycle {

}

class FuelEngine {

}

class ElectricEngine {

}

Garage *-- GarageVehicle
GarageVehicle *-- Vehicle
Vehicle <|-- Car
Vehicle <|-- Truck
Vehicle <|-- Motorcycle
Vehicle *-- FuelEngine
Vehicle *-- ElectricEngine

@enduml

